Update project branding from "Electric Heater Room" to "Orange Terry"; replace logo and favicon images, modify HTML and CSS for new design, and update audio archive data. Remove unused event data and enhance lazy loading for audio embeds.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Electric Heater Room",
-  "short_name": "EHR",
-  "description": "Electric Heater Room - Live streams, audio sets, video sets, and events",
+  "name": "Orange Terry",
+  "short_name": "OT",
+  "description": "Orange Terry - Live streams, audio sets, video sets, and events",
   "start_url": "/",
   "display": "browser",
   "background_color": "#000000",
